# RedCamel

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  GUI_remi_valid.py  README.md  REUSE.toml  environment.yml  momentum.py  pixi.toml  pyproject.toml
.binder/: environment.yml  postBuild  workspace.json
.github/workflows/: ci.yml  draftrelease.yml  prerelease.yml  release.yml
examples/: redcamel_data.h5  remicalculator.ipynb  scipp_example.ipynb  scipp_example.ipynb.license
src/red_cat/: remi_gui.py
src/redcamel/: __init__.py  remi_calculator.py  remi_coincidence.py  remi_gui.py  remi_particles.py  remi_scipp_helpers.py  units.py
test/: test_mass_amu.py  test_remi_calculator.py
