# SPDX-FileCopyrightText: 2025 Hannes Lindenblatt
#
# SPDX-License-Identifier: CC0-1.0
[project]
name = "red-cat"
version = "0.1.0"
description = "GUI tool to simulate Reaction Microscope detector images."
readme = "README.md"
authors = [
    {name = "Patrizia Schoch"},
    {name = "Hannes Lindenblatt", email = "hannes.lindenblatt@desy.de" },
]
maintainers = [
    {name = "Hannes Lindenblatt", email = "hannes.lindenblatt@desy.de" },
]
requires-python = ">=3.12"
dependencies = [
    "chemformula>=1.3.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "xarray>=2025.6.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]

license = "GPL-3.0-or-later"
license-files = ["LICENSES/*"]

[project.scripts]
red-cat = "red_cat:main"

[project.urls]
Homepage = "https://codeberg.org/FlashREMI/red-cat"
Repository = "https://codeberg.org/FlashREMI/red-cat.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
