# SPDX-FileCopyrightText: 2025 Hannes Lindenblatt
#
# SPDX-License-Identifier: CC0-1.0
[project]
name = "redcamel"
version = "0.1.2"
description = "GUI tool to simulate Reaction Microscope detector images."
readme = "README.md"
authors = [
    {name = "Patrizia Schoch"},
    {name = "Hannes Lindenblatt", email = "hannes.lindenblatt@desy.de" },
]
maintainers = [
    {name = "Hannes Lindenblatt", email = "hannes.lindenblatt@desy.de" },
]
requires-python = ">=3.12"
dependencies = [
    "chemformula>=1.3.1",
    "graphviz>=0.21",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "plopp>=25.6.1",
    "scipp>=25.5.1",
    "scipy>=1.16.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]

license = "GPL-3.0-or-later"
license-files = ["LICENSES/*"]

[project.scripts]
redcamel = "redcamel:main"

[project.urls]
Homepage = "https://codeberg.org/FlashREMI/RedCamel"
Repository = "https://codeberg.org/FlashREMI/RedCamel.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-sugar>=1.0.0",
    "ruff>=0.7.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true
